--- a/pipeline.yml
+++ b/pipeline.yml
@@ -19,7 +19,7 @@ jobs:
 
       image_resource:
         type: docker-image
-        source: { repository: ruby, tag: 2.4.0-alpine }
+        source: { repository: ruby, tag: 2.3.0 }
 
       run:
         path: sh
