:bug: Fix: bundle install

--- a/pipeline.yml
+++ b/pipeline.yml
@@ -27,6 +27,7 @@ jobs:
         args:
           - -exc
           - |
+            bundle install
             rspec
 - name: deploy-stage
   serial: true
